port to 1.21.6(-pre3)
- motion blur is only just as broken as before, but not more than that at least